tests/diagnostics/types/declarations/duplicate_field/expect.txt
# exit: 1
input/main.lang0:3:5: error: duplicate field 'id' in 'User'
      id: string,
      ^
